[package]
name = 'arrow_extendr'
version = '53.0.0'
edition = '2021'
license = "MIT OR Apache-2.0"
repository = "https://github.com/josiahparry/arrow-extendr"
authors = ["Josiah Parry<josiah.parry@gmail.com>"]
description = "Enables the use of arrow-rs in R using extendr and nanoarrow"
categories = ["development-tools::ffi"]
keywords = ["arrow", "extendr", "rstats"]
readme = "README.md"

include = ["src/*", "Cargo.toml", "README.md"]

# matches arrow
rust-version = "1.70.0"

[lib]
crate-type = ["staticlib", "lib"]
name = 'arrow_extendr'

[dependencies]
arrow = { version = "53.0.0", features = ["ffi"] }
extendr-api = '>=0.6.0'
